ffi/include/int2dds-ffi.h

/**
 * Opaque type info builder for the FFI layer.
 *
 * Collects field descriptions and builds TypeIdentifier/TypeObject
 * for DDS-XTypes discovery.
 */
typedef struct Int2DdsTypeInfo Int2DdsTypeInfo;
/**
 * Opaque handle wrapping a discovered TypeObject.
 */
typedef struct Int2DdsTypeObject Int2DdsTypeObject;
/**
 * FFI return codes
 */
typedef int32_t Int2DdsRet;
Int2DdsRet int2dds_type_info_create(const char *type_name,
                                    int32_t extensibility,
                                    struct Int2DdsTypeInfo **out);
/**
 * Create an enum type info builder. `bit_bound` is the discriminant bit width (IDL enums
 * are i32 -> 32). Populate literals with `int2dds_type_info_add_enum_literal`, then pass
 * the builder to `int2dds_type_info_add_nested_field` (or a collection-of-nested variant)
 * on the parent so an enum-typed member resolves and computes native-Rust keys.
 */
Int2DdsRet int2dds_type_info_create_enum(const char *type_name,
                                         uint16_t bit_bound,
                                         struct Int2DdsTypeInfo **out);
/**
 * Append a literal to an enum builder. `is_default` marks the `@default` literal (0/1);
 * no-op on a non-enum builder.
 */
Int2DdsRet int2dds_type_info_add_enum_literal(struct Int2DdsTypeInfo *type_info,
                                              const char *literal_name,
                                              int32_t value,
                                              int32_t is_default);
/**
 * Create a bitmask type info builder. `bit_bound` is the flag storage bit width (default 32).
 */
Int2DdsRet int2dds_type_info_create_bitmask(const char *type_name,
                                            uint16_t bit_bound,
                                            struct Int2DdsTypeInfo **out);
/**
 * Append a flag to a bitmask builder. `position` is the bit index; no-op on a non-bitmask.
 */
Int2DdsRet int2dds_type_info_add_bitmask_flag(struct Int2DdsTypeInfo *type_info,
                                              const char *flag_name,
                                              uint16_t position);
/**
 * Add a primitive-typed field to the type info builder.
 */
Int2DdsRet int2dds_type_info_add_field(struct Int2DdsTypeInfo *type_info,
                                       const char *field_name,
                                       int32_t field_type,
                                       int32_t flags);
/**
 * Add a (possibly bounded) narrow-string field. `bound == 0` means unbounded.
 *
 * Prefer this over `int2dds_type_info_add_field(.., INT2DDS_FIELD_STRING, ..)` when the
 * IDL declares `string<N>`, so the emitted TypeIdentifier carries the bound and matches
 * strict XTypes peers byte-for-byte.
 */
Int2DdsRet int2dds_type_info_add_string_field(struct Int2DdsTypeInfo *type_info,
                                              const char *field_name,
                                              uint32_t bound,
                                              int32_t flags);
/**
 * Add a (possibly bounded) wide-string (`wstring<N>`) field. `bound == 0` means unbounded.
 */
Int2DdsRet int2dds_type_info_add_wstring_field(struct Int2DdsTypeInfo *type_info,
                                               const char *field_name,
                                               uint32_t bound,
                                               int32_t flags);
/**
 * Add a sequence field to the type info builder.
 */
Int2DdsRet int2dds_type_info_add_sequence_field(struct Int2DdsTypeInfo *type_info,
                                                const char *field_name,
                                                int32_t element_type,
                                                uint32_t bound,
                                                int32_t flags);
/**
 * Add an array field to the type info builder.
 */
Int2DdsRet int2dds_type_info_add_array_field(struct Int2DdsTypeInfo *type_info,
                                             const char *field_name,
                                             int32_t element_type,
                                             uint32_t array_size,
                                             int32_t flags);
/**
 * Add a multidimensional array field. `dims` lists the sizes in declaration order
 * (outer first, e.g. `long m[2][3]` -> `{2, 3}`); they are folded into one flat
 * plain-array TypeIdentifier (XTypes 7.4.3.4), matching the Rust derive.
 */
Int2DdsRet int2dds_type_info_add_array_field_nd(struct Int2DdsTypeInfo *type_info,
                                                const char *field_name,
                                                int32_t element_type,
                                                const uint32_t *dims,
                                                uintptr_t dims_len,
                                                int32_t flags);
/**
 * Add a named (complex) type field to the type info builder.
 */
Int2DdsRet int2dds_type_info_add_named_type_field(struct Int2DdsTypeInfo *type_info,
                                                  const char *field_name,
                                                  const char *type_hash_name,
                                                  int32_t flags);
/**
 * Add a nested struct-typed field, supplying the nested type's own builder.
 *
 * Unlike `int2dds_type_info_add_named_type_field` (which emits a name-hash
 * `MinimalTypeId` reference), this references the nested type by its content-hash
 * `CompleteTypeId` — matching the derive macro byte-for-byte — and captures the nested
 * `TypeObject` so composite (nested-struct) key members resolve and compute native-Rust
 * InstanceHandles. `nested_type_info` is borrowed, not consumed: the caller still owns
 * it and must destroy it.
 */
Int2DdsRet int2dds_type_info_add_nested_field(struct Int2DdsTypeInfo *type_info,
                                              const char *field_name,
                                              const struct Int2DdsTypeInfo *nested_type_info,
                                              int32_t flags);
/**
 * Add a `sequence<Nested>` field whose element is a nested struct/enum/bitmask, supplying
 * the element's own builder. References the element by content-hash `CompleteTypeId`
 * (matching the derive macro) so sequence-of-nested key members resolve and compute
 * native-Rust InstanceHandles. `element_type_info` is borrowed, not consumed.
 */
Int2DdsRet int2dds_type_info_add_sequence_of_nested_field(struct Int2DdsTypeInfo *type_info,
                                                          const char *field_name,
                                                          const struct Int2DdsTypeInfo *element_type_info,
                                                          uint32_t bound,
                                                          int32_t flags);
/**
 * Add a `Nested[N]` fixed-array field whose element is a nested struct/enum/bitmask,
 * supplying the element's own builder. `element_type_info` is borrowed, not consumed.
 */
Int2DdsRet int2dds_type_info_add_array_of_nested_field(struct Int2DdsTypeInfo *type_info,
                                                       const char *field_name,
                                                       const struct Int2DdsTypeInfo *element_type_info,
                                                       uint32_t array_size,
                                                       int32_t flags);
/**
 * Multidimensional `Nested[N][M]...` variant of
 * `int2dds_type_info_add_array_of_nested_field`. `dims` is in declaration order
 * (outer first) and is folded into one flat plain-array id.
 */
Int2DdsRet int2dds_type_info_add_array_of_nested_field_nd(struct Int2DdsTypeInfo *type_info,
                                                          const char *field_name,
                                                          const struct Int2DdsTypeInfo *element_type_info,
                                                          const uint32_t *dims,
                                                          uintptr_t dims_len,
                                                          int32_t flags);
Int2DdsRet int2dds_type_info_add_sequence_of_named_field(struct Int2DdsTypeInfo *type_info,
                                                         const char *field_name,
                                                         const char *element_hash_name,
                                                         uint32_t bound,
                                                         int32_t flags);
Int2DdsRet int2dds_type_info_add_array_of_named_field(struct Int2DdsTypeInfo *type_info,
                                                      const char *field_name,
                                                      const char *element_hash_name,
                                                      uint32_t array_size,
                                                      int32_t flags);
/**
 * Multidimensional variant of `int2dds_type_info_add_array_of_named_field`. `dims` is in
 * declaration order (outer first) and is folded into one flat plain-array id.
 */
Int2DdsRet int2dds_type_info_add_array_of_named_field_nd(struct Int2DdsTypeInfo *type_info,
                                                         const char *field_name,
                                                         const char *element_hash_name,
                                                         const uint32_t *dims,
                                                         uintptr_t dims_len,
                                                         int32_t flags);
Int2DdsRet int2dds_type_info_to_type_object(const struct Int2DdsTypeInfo *type_info,
                                            struct Int2DdsTypeObject **out);
/**
 * Destroy a type info builder.
 */
void int2dds_type_info_destroy(struct Int2DdsTypeInfo *type_info);